[gd_scene load_steps=3 format=3 uid="uid://df7cd8fkxsvue"]

[ext_resource type="Script" path="res://Scraper.gd" id="1_2fwng"]
[ext_resource type="Script" path="res://addons/cookie_http_request/main/cookie_http_request.gd" id="2_iobqe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fwng")

[node name="CookieHTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("2_iobqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 725.0
offset_bottom = 725.0
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="E-Hentai URL" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 69.0
offset_right = 710.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 27
placeholder_text = "Enter E-Hentai URL"

[node name="Manga Name" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 131.0
offset_right = 710.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 27
placeholder_text = "Enter Manga Name"

[node name="ipb_member_id" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 646.0
offset_right = 273.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 27
placeholder_text = "ipb_member_id"

[node name="ipb_pass_hash" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 292.0
offset_top = 646.0
offset_right = 551.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 27
placeholder_text = "ipb_pass_hash"

[node name="Select Manga File" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 13.0
offset_right = 712.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 25
text = "Select Manga File"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
position = Vector2i(10, 40)
size = Vector2i(705, 675)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.cbz", "*.zip")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 193.0
offset_right = 713.0
offset_bottom = 624.0

[node name="Progress" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_right = 697.0
offset_bottom = 426.0
theme_override_font_sizes/normal_font_size = 25
scroll_following = true

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 636.0
offset_right = 710.0
offset_bottom = 707.0
theme_override_font_sizes/font_size = 45
text = "START"

[connection signal="pressed" from="Select Manga File" to="." method="_on_select_manga_file_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
